--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <title>The Last of Us</title>
 </head>
 <body>
-  <header>
-    <img src="images/hbo logo.svg" width="200">
+  <header role="header">
+    <img src="images/hbo-logo.svg" width="200">
 
-    <nav>
+    <nav role="nav" role="navigation">
       <ul>
-        <li><a href="#">About the Show</a></li>
-        <li><a href="#">Featured Characters</a></li>
+        <li><a href="#about-the-show">About the Show</a></li>
+        <li><a href="#featured-characters">Featured Characters</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section>
-        <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
+    <section id="the-last-of-us" role="navigation">
+        <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800" role="presentation"/>
         
         <h1>The Last of Us</h1>
 
@@ -29,13 +29,13 @@
         <p>A series based on the critically acclaimed video game -- and starring Pedro Pascal and Bella Ramsey, among others -- is available now on HBO and HBO Max.</p>
     </section>
 
-    <section>
+    <section id="featured-characters">
 
       <h1>Featured characters</h1>
 
       <article>
         <h3>Joel</h3>
-        <img src="images/joel-512x512.webp" alt="" />
+        <img src="images/joel-512x512.webp" alt="" role="presentation"/>
         <p>A hardened survivor, tormented by past trauma and failure, who must trek across a pandemic-ravaged America, all the while protecting a girl who represents the last hope of humanity.</p>
         <a href="#">Read more</a>
       </article>
@@ -64,7 +64,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <p><small>&copy HBO 2023</small></p>
   </footer>
 </body>
