--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>The Last of Us</title>
 </head>
 <body>
-  <header role="header">
+  <header role="banner">
     <img src="images/hbo-logo.svg" width="200">
 
     <nav role="nav" role="navigation">
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main>
+  <main role="main">
     <section id="the-last-of-us" role="navigation">
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800" role="presentation"/>
         
@@ -35,30 +35,30 @@
 
       <article>
         <h3>Joel</h3>
-        <img src="images/joel-512x512.webp" alt="" role="presentation"/>
+        <img src="images/joel-512x512.webp" alt="Joel an American survivor" role="presentation"/>
         <p>A hardened survivor, tormented by past trauma and failure, who must trek across a pandemic-ravaged America, all the while protecting a girl who represents the last hope of humanity.</p>
-        <a href="#">Read more</a>
+        <a href="#" area-label="Read more information about Joel">Read more</a>
       </article>
 
       <article>
         <h4>Ellie</h4>
-        <img src="ellie-512x512.webp" alt="" />
+        <img src="image/ellie-512x512.webp" alt="" role="presentation"/>
         <p>A 14-year old orphan who has never known anything but a ravaged planet, struggles to balance her instinct for anger and defiance with her need for connection and belonging… as well as the newfound reality that she may be the key to saving the world.</p>
-        <a href="#">Read more</a>
+        <a href="#" area-label="Read more information about Ellie">Read more</a>
       </article>
 
       <article>
         <h5>Marlene</h5>
         <img src="images/marlene-512x512.webp" alt="" />
         <p>Leader of the Fireflies, a resistance movement struggling for freedom against an oppressive military regime. (Dandridge voiced the Marlene character in “The Last of Us” and “The Last of Us Part II” video games.)</p>
-        <a href="#">Read more</a>
+        <a href="#" area-label="Read more information about Marlene">Read more</a>
       </article>  
 
       <article>
           <h6>Tommy</h6>
           <img src="images/tommy-512x512.webp" alt="" />
           <p>Joel’s younger brother, a former soldier who hasn’t lost his sense of idealism and hope for a better world.</p>
-          <a href="#">Read more</a>
+          <a href="#" area-label="Read more information about Tommy">Read more</a>
       </article>
 
     </section>
