--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header role="banner">
     <img src="images/hbo-logo.svg" width="200">
 
-    <nav role="nav" role="navigation">
+    <nav role="navigation" id="nav"></nav>
       <ul>
         <li><a href="#about-the-show">About the Show</a></li>
         <li><a href="#featured-characters">Featured Characters</a></li>
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main role="main" id="main"></main>
     <section id="the-last-of-us" role="navigation">
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800" role="presentation"/>
         
@@ -34,31 +34,31 @@
       <h1>Featured characters</h1>
 
       <article>
-        <h3>Joel</h3>
+        <h2>Joel</h2>
         <img src="images/joel-512x512.webp" alt="Joel an American survivor" role="presentation"/>
         <p>A hardened survivor, tormented by past trauma and failure, who must trek across a pandemic-ravaged America, all the while protecting a girl who represents the last hope of humanity.</p>
-        <a href="#" area-label="Read more information about Joel">Read more</a>
+        <a href="#featured-characters" area-label="Read more information about Joel">Read more</a>
       </article>
 
       <article>
-        <h4>Ellie</h4>
-        <img src="image/ellie-512x512.webp" alt="" role="presentation"/>
+        <h3>Ellie</h3>
+        <img src="image/ellie-512x512.webp" alt="14-year-old orphan girl Ellie." role="presentation" />
         <p>A 14-year old orphan who has never known anything but a ravaged planet, struggles to balance her instinct for anger and defiance with her need for connection and belonging… as well as the newfound reality that she may be the key to saving the world.</p>
-        <a href="#" area-label="Read more information about Ellie">Read more</a>
+        <a href="#featured-characters" area-label="Read more about character Ellie">Read more</a>
       </article>
 
       <article>
-        <h5>Marlene</h5>
-        <img src="images/marlene-512x512.webp" alt="" />
+        <h4>Marlene</h4>
+        <img src="images/marlene-512x512.webp" alt="Merlene African American leader and advicate towards freedom of miliysty regime" role="presentation"/>
         <p>Leader of the Fireflies, a resistance movement struggling for freedom against an oppressive military regime. (Dandridge voiced the Marlene character in “The Last of Us” and “The Last of Us Part II” video games.)</p>
-        <a href="#" area-label="Read more information about Marlene">Read more</a>
+        <a href="#featured-characters" area-label="Read more about character Marlene">Read more</a>
       </article>  
 
       <article>
-          <h6>Tommy</h6>
-          <img src="images/tommy-512x512.webp" alt="" />
+          <h5>Tommy</h5>
+          <img src="images/tommy-512x512.webp" alt="Tommy a former solder with brown hair and light skin" role="presentation" />
           <p>Joel’s younger brother, a former soldier who hasn’t lost his sense of idealism and hope for a better world.</p>
-          <a href="#" area-label="Read more information about Tommy">Read more</a>
+          <a href="#featured-characters" area-label="Read more about character Tommy">Read more</a>
       </article>
 
     </section>
