fixed broken link
Fixed broken link for Ellie's photo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <article>
         <h3>Ellie</h3>
-        <img src="image/ellie-512x512.webp" alt="14-year-old orphan girl Ellie." role="presentation" />
+        <img src="images/ellie-512x512.webp" alt="14-year-old orphan girl Ellie." role="presentation" />
         <p>A 14-year old orphan who has never known anything but a ravaged planet, struggles to balance her instinct for anger and defiance with her need for connection and belonging… as well as the newfound reality that she may be the key to saving the world.</p>
         <a href="#featured-characters" area-label="Read more about character Ellie">Read more</a>
       </article>
